--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^6.3.3",
     "gsap": "^3.12.2",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
-    "web-vitals": "^2.1.4",
-    "locomotive-scroll": "^4.1.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
